@@ -7,89 +7,6 @@
 
 INCLUDE (WebKitFS)
 
-FIND_PACKAGE(Perl REQUIRED)
-
-# - Create hash table *.lut.h
-# GENERATE_HASH_LUT(input_file output_file)
-MACRO(GENERATE_HASH_LUT _input _output)
-    SET(HASH_LUT_GENERATOR "${JAVASCRIPTCORE_DIR}/create_hash_table")
-
-    FOREACH (_tmp ${ARGN})
-        IF (${_tmp} STREQUAL "MAIN_DEPENDENCY")
-            SET(_main_dependency ${_input})
-        ENDIF ()
-    ENDFOREACH ()
-
-    ADD_CUSTOM_COMMAND(
-        OUTPUT ${_output}
-        MAIN_DEPENDENCY ${_main_dependency}
-        DEPENDS ${_input} ${HASH_LUT_GENERATOR}
-        COMMAND ${PERL_EXECUTABLE} ${HASH_LUT_GENERATOR} ${_input} > ${_output}
-        VERBATIM)
-ENDMACRO()
-
-# - Create hash table *.lut.h using at JavaScriptCore/runtime
-# GENERATE_HASH_LUT_RUNTIME(source)
-#
-# The generated files lives in ${CMAKE_BINARY_DIR}/JavaScriptCore/runtime/
-# and will have suffix ".lut.h"
-#
-# Input file is assumed to be in JavaScriptCore/runtime/${source}.cpp
-MACRO(GENERATE_HASH_LUT_RUNTIME _file)
-  ADD_CUSTOM_COMMAND(
-    OUTPUT  ${CMAKE_BINARY_DIR}/JavaScriptCore/runtime/${_file}.lut.h
-    DEPENDS ${JAVASCRIPTCORE_DIR}/runtime/${_file}.cpp  ${HASH_LUT_GENERATOR}
-    COMMAND ${PERL_EXECUTABLE} ${HASH_LUT_GENERATOR} ${JAVASCRIPTCORE_DIR}/runtime/${_file}.cpp -i > ${CMAKE_BINARY_DIR}/JavaScriptCore/runtime/${_file}.lut.h
-    VERBATIM)
-  LIST(APPEND GENERATED_HASH_LUT_RUNTIME_FILES "${CMAKE_BINARY_DIR}/JavaScriptCore/runtime/${_file}.lut.h")
-ENDMACRO()
-
-
-FIND_PROGRAM (BISON_EXECUTABLE bison)
-IF (NOT BISON_EXECUTABLE)
-  MESSAGE(FATAL_ERROR "Missing bison")
-ENDIF (NOT BISON_EXECUTABLE)
-FIND_PACKAGE_HANDLE_STANDARD_ARGS(Bison DEFAULT_MSG BISON_EXECUTABLE)
-
-# - Create a grammar using bison.
-# GENERATE_GRAMMAR(prefix source_file)
-#
-# Reads a source_file (*.y) Generates the .cpp and .h files in
-# ${DERIVED_SOURCES_DIR}
-MACRO(GENERATE_GRAMMAR _prefix _source)
-  GET_FILENAME_COMPONENT(_name ${_source} NAME_WE)
-  SET(_out_base ${DERIVED_SOURCES_DIR}/${_name})
-  ADD_CUSTOM_COMMAND(
-    OUTPUT  ${_out_base}.cpp ${_out_base}.h
-    DEPENDS ${_source}
-    COMMAND ${BISON_EXECUTABLE} -p ${_prefix} ${_source} -o ${_out_base}.cpp --defines=${_out_base}.h
-    VERBATIM)
-  UNSET(_out_base)
-  UNSET(_name)
-ENDMACRO ()
-
-
-FIND_PROGRAM(GPERF_EXECUTABLE gperf)
-IF (NOT GPERF_EXECUTABLE)
-  MESSAGE(FATAL_ERROR "Missing gperf")
-ENDIF ()
-FIND_PACKAGE_HANDLE_STANDARD_ARGS(GPerf DEFAULT_MSG GPERF_EXECUTABLE)
-SET(PERF_HASH_GENERATOR ${WEBCORE_DIR}/make-hash-tools.pl)
-
-# - Create perfect hash tables using gperf
-# GENERATE_GPERF(extension source_file)
-#
-# The generated files lives in ${DERIVED_SOURCES_DIR} and ends in .cpp
-MACRO(GENERATE_GPERF _source)
-  GET_FILENAME_COMPONENT(_name ${_source} NAME_WE)
-  ADD_CUSTOM_COMMAND(
-    OUTPUT ${DERIVED_SOURCES_DIR}/${_name}.cpp
-    DEPENDS ${_source}
-    COMMAND ${PERL_EXECUTABLE} ${PERF_HASH_GENERATOR} ${DERIVED_SOURCES_DIR} ${_source}
-    VERBATIM)
-ENDMACRO ()
-
-
 # Modules that the bindings generator scripts may use
 SET(SCRIPTS_BINDINGS
   ${WEBCORE_DIR}/bindings/scripts/CodeGenerator.pm
