@@ -2,6 +2,16 @@
 
         Reviewed by Nikolas Zimmermann.
 
+        [CMake] Cleanup generator code.
+        https://bugs.webkit.org/show_bug.cgi?id=39164
+
+        * cmake/WebKitGenerators.cmake:
+        * cmake/WebKitMacros.cmake:
+
+2010-08-13  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Nikolas Zimmermann.
+
         [CMake] Add missing FIND_PACKAGE(Gperf)
         https://bugs.webkit.org/show_bug.cgi?id=43937
 
